# dft-job-application

./: .gitignore  Makefile  README.md  db.py  main.py  requirements.txt
alembic/: env.py
alembic/versions/: a42fcdece376_added_contact_table.py  f1572eefb5ed_upate_contact_table.py
api/: .gitignore  .pylintrc  alembic.ini  db.py  main.py  pyproject.toml  pytest.ini  requirements.txt
api/alembic/versions/: 93b5f5494ea6_initialise.py  a42fcdece376_added_contact_table.py
api/core/: db.py
api/models/: contact.py  errors.py
api/routes/v1/: router.py
api/routes/v1/endpoints/: contacts.py
api/schemas/: contact.py
api/services/: contact.py
api/tests/: conftest.py  contacts_integration_test.py  contacts_route_test.py  contacts_service_test.py
frontend/: .gitignore  .pylintrc  pyproject.toml
frontend/core/: asgi.py  settings.py  urls.py  wsgi.py
frontend/web/: urls.py  views.py
frontend/web/e2e/: conftest.py  test_create_contact_page.py  test_edit_contact_page.py  test_index_page.py
frontend/web/static/css/: app.css
frontend/web/templates/: base.html  create_contact.html  create_content.html  edit_contact.html  index.html
frontend/web/templates/components/: alert.html  contact_card.html  contact_form.html  (+2 more)
frontend/web/utils/: data.py  form.py
models/: contact.py
routes/: contacts.py
routes/v1/endpoints/: contacts.py
schemas/: contact.py
services/: contact.py
web/: package.json
web/app/: root.tsx  tailwind.css
web/app/components/: Navbar.tsx  ThemeController.tsx
web/app/lib/: themeStorage.ts
web/app/routes/: _index.tsx
(+2 files in other folders)
