[project]
name = "uk-government-job-application-api"
version = "1.0.0"
description = "UK Government Job Application API"
authors = [{ name = "No Name", email = "no.name@example.com" }]

dependencies = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "alembic",
]

[tool.pytest.ini_options]
python_files = "test.py test_*.py *_test.py"
addopts = ["-v", "--cov=.", "--cov-report=term-missing"]
pythonpath = "."

[tool.coverage.run]
branch = true
source = ["api"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "def get_session",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"